[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"


[project]
name = "lib-dzne-levenshtein"
version = "0.1.1"
description = "Libary for dealing with the levenshtein-program. "
license = { file = "LICENSE" }
authors = [{ name = "Johannes Horler", email = "johannes.horler@dzne.de" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ['levenshtein']
dependencies = [
    "numpy>=1.24.2",
]
requires-python = ">=3.11"

